--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
-	"name": "pcsian",
+	"name": "hca",
 	"version": "0.0.1",
+	"packageManager": "pnpm@10.29.1",
 	"private": true,
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build",
 		"preview": "vite preview",
-		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-		"lint": "prettier --check .",
-		"format": "prettier --write .",
+		"check": "svelte-kit sync && svelte-check ./jsconfig.json",
+		"check:watch": "svelte-kit sync && svelte-check ./jsconfig.json --watch",
+		"lint": "prettier --plugin-search-dir . --check . && eslint .",
+		"format": "prettier --plugin-search-dir . --write .",
 		"host": "vite --host"
 	},
 	"devDependencies": {
@@ -19,11 +20,21 @@
 		"@iconify-json/ph": "^1.2.2",
 		"@poppanator/sveltekit-svg": "6.0.1",
 		"@resvg/resvg-js": "^2.6.2",
+		"@sveltejs/adapter-auto": "^7.0.0",
 		"@sveltejs/adapter-netlify": "5.2.4",
+		"@sveltejs/adapter-node": "^5.5.2",
+		"@sveltejs/adapter-vercel": "^6.3.1",
 		"@sveltejs/enhanced-img": "0.10.0",
+		"@sveltejs/kit": "^2.50.2",
+		"@sveltejs/vite-plugin-svelte": "^6.2.4",
+		"@tailwindcss/forms": "0.5.11",
+		"@tailwindcss/postcss": "^4.1.18",
+		"@tailwindcss/typography": "0.5.19",
+		"@tailwindcss/vite": "^4.1.18",
 		"@total-typescript/ts-reset": "^0.6.1",
 		"@types/node": "^25.2.0",
 		"@types/rss": "^0.0.32",
+		"autoprefixer": "^10.4.24",
 		"base-64": "^1.0.0",
 		"cookie": "1.1.1",
 		"devalue": "^5.6.2",
@@ -38,6 +49,10 @@
 		"mdast-util-to-string": "^4.0.0",
 		"mdsvex": "0.12.6",
 		"mdsvex-relative-images": "^2.0.0",
+		"postcss": "^8.5.6",
+		"prettier": "^3.8.1",
+		"prettier-plugin-svelte": "^3.4.1",
+		"prettier-plugin-tailwindcss": "^0.7.2",
 		"radash": "^12.1.1",
 		"reading-time": "^1.5.0",
 		"rehype-accessible-emojis": "^0.3.2",
@@ -57,36 +72,22 @@
 		"sass": "^1.97.3",
 		"set-cookie-parser": "3.0.1",
 		"sharp": "0.34.5",
+		"svelte": "^5.49.2",
+		"svelte-check": "^4.3.6",
 		"svelte-preprocess": "^6.0.3",
 		"svelte-sequential-preprocessor": "2.0.3",
 		"svgo": "4.0.0",
-		"typescript-eslint": "^8.54.0",
-		"unist-util-visit": "^5.1.0",
-		"unplugin-icons": "^23.0.1",
-		"vite-imagetools": "^9.0.2",
-		"@sveltejs/adapter-auto": "^7.0.0",
-		"@sveltejs/adapter-node": "^5.5.2",
-		"@sveltejs/adapter-vercel": "^6.3.1",
-		"@sveltejs/kit": "^2.50.2",
-		"@tailwindcss/vite": "^4.1.18",
-		"autoprefixer": "^10.4.24",
-		"postcss": "^8.5.6",
-		"prettier": "^3.8.1",
-		"prettier-plugin-svelte": "^3.4.1",
-		"tslib": "^2.8.1",
-		"typescript": "^5.9.3",
-		"vite": "^7.3.1",
-		"vite-plugin-mkcert": "^1.17.9",
 		"tailwind-merge": "3.4.0",
 		"tailwindcss": "^4.1.18",
 		"tailwindcss-animated": "2.0.0",
-		"@tailwindcss/forms": "0.5.11",
-		"@tailwindcss/postcss": "^4.1.18",
-		"@tailwindcss/typography": "0.5.19",
-		"prettier-plugin-tailwindcss": "^0.7.2",
-		"@sveltejs/vite-plugin-svelte": "^6.2.4",
-		"svelte-check": "^4.3.6",
-		"svelte": "^5.49.2"
+		"tslib": "^2.8.1",
+		"typescript": "^5.9.3",
+		"typescript-eslint": "^8.54.0",
+		"unist-util-visit": "^5.1.0",
+		"unplugin-icons": "^23.0.1",
+		"vite": "^7.3.1",
+		"vite-imagetools": "^9.0.2",
+		"vite-plugin-mkcert": "^1.17.9"
 	},
 	"type": "module",
 	"dependencies": {
@@ -95,6 +96,7 @@
 		"@vercel/speed-insights": "^1.3.1",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
+		"date-fns": "^4.1.0",
 		"github-slugger": "^2.0.0",
 		"hash-it": "7.0.2",
 		"nodemailer": "^6.9.12",
@@ -102,13 +104,12 @@
 		"rss": "^1.2.2",
 		"satori": "0.19.1",
 		"satori-html": "^0.3.2",
+		"svelte-inview": "^4.0.4",
 		"svelte-motion": "^0.12.2",
 		"svelte-persisted-store": "^0.12.0",
 		"sveltekit-superforms": "2.29.1",
 		"sveltekit-view-transition": "^0.5.3",
 		"svoast": "3.0.3",
-		"zod": "4.3.6",
-		"date-fns": "^4.1.0",
-		"svelte-inview": "^4.0.4"
+		"zod": "4.3.6"
 	}
 }
